syntax = "proto3";

package kk_schedule;

option go_package = "/kk_schedule";

import "kk_schedule/JobList.proto";
import "kk_schedule/JobGet.proto";
import "kk_schedule/JobEnable.proto";
import "kk_schedule/JobDisable.proto";
import "kk_schedule/JobSetSpec.proto";
import "kk_schedule/JobPut.proto";
import "kk_schedule/ServiceList.proto";
import "kk_schedule/ServicePut.proto";
import "kk_schedule/ServiceGet.proto";
import "kk_schedule/ServiceDelete.proto";
import "kk_schedule/JobDelete.proto";

service KKSchedule {
  // use GClient

  rpc JobList(JobList.Input) returns (JobList.Output);
  rpc JobGet(JobGet.Input) returns (JobGet.Output);
  rpc JobSetSpec(JobSetSpec.Input) returns (JobSetSpec.Output);
  rpc JobEnable(JobEnable.Input) returns (JobEnable.Output);
  rpc JobDisable(JobDisable.Input) returns (JobDisable.Output);
  rpc JobPut(JobPut.Input) returns (JobPut.Output);
  rpc JobDelete(JobDelete.Input) returns (JobDelete.Output);

  // use GClient.Storer

  rpc ServiceList(ServiceList.Input) returns (ServiceList.Output);
  rpc ServicePut(ServicePut.Input) returns (ServicePut.Output);
  rpc ServiceGet(ServiceGet.Input) returns (ServiceGet.Output);
  rpc ServiceDelete(ServiceDelete.Input) returns (ServiceDelete.Output);
}